# ygz-stereo-inertial

./: .gitignore  CMakeLists.txt  README.md  generate.sh
backend/: CMakeLists.txt
backend/src/: BackendSlidingWindowG2O.cpp
common/: CMakeLists.txt
common/include/ygz/: Frame.h  G2OTypes.h  Settings.h
common/src/: Frame.cpp  G2OTypes.cpp
cv/include/ygz/: ORBMatcher.h  Tracker.h  TrackerLK.h
cv/src/: ORBExtractor.cpp  ORBMatcher.cpp  Tracker.cpp  TrackerLK.cpp
examples/: CMakeLists.txt  EuRoC.yaml  EurocStereo.yaml  EurocStereoVIO.cpp  EurocStereoVIO.yaml  Kitti.cpp
system/include/ygz/: System.h
system/src/: System.cpp
util/include/ygz/: EurocReader.h
